--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,4 @@ services:
     ports:
       - 8088:8088
     volumes:
-    - type: volume
-        source: ./backend/data
-        target: /app/data
+      - ./backend/data:/app/data
