changed the react.origin from localhost to pondclient-test

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 
 custom.security.enabled=true
-react.origin=http://localhost:3000
+react.origin=http://pondclient-test:3000
 security.jwt.token.secret-key=secret
 security.jwt.token.expiration=3600000
 spring.datasource.initialize=true
